add service test