@@ -2,8 +2,8 @@ package ru.practicum.shareit.requests;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import ru.practicum.shareit.exeption.BadRequestException;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.ItemRepository;
@@ -15,6 +15,7 @@ import ru.practicum.shareit.requests.repository.ItemRequestRepository;
 import ru.practicum.shareit.requests.service.ItemRequestServiceImpl;
 import ru.practicum.shareit.user.dto.UserDto;
 import ru.practicum.shareit.user.mapper.UserMapper;
+import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.service.UserService;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -33,7 +34,6 @@ class ItemRequestServiceImplTest {
     private ItemRepository itemRepository;
     private ItemRequestServiceImpl itemRequestService;
     private ItemRequest itemRequest;
-    private ItemRequest itemRequest2;
     private ItemRequestCreateDto itemRequestCreateDto;
     private UserDto userDto;
     private Item item;
@@ -46,7 +46,6 @@ class ItemRequestServiceImplTest {
         itemRequestService = new ItemRequestServiceImpl(itemRequestRepository, userService, itemRepository);
         userDto = new UserDto(1L, "User1", "user@email.ru");
         itemRequest = new ItemRequest(1L, "Request",LocalDateTime.now(), UserMapper.toUser(userDto));
-        itemRequest2 = new ItemRequest(1L, "Request",LocalDateTime.now(), UserMapper.toUser(userDto));
         itemRequestCreateDto = new ItemRequestCreateDto(1L, "Request");
         item = new Item(1L, "item", "item test", true,
                                                                                UserMapper.toUser(userDto), itemRequest);
@@ -65,7 +64,6 @@ class ItemRequestServiceImplTest {
 
     @Test
     void getUserRequests() {
-        when(userService.getUser(userDto.getId())).thenReturn(userDto);
         when(itemRequestRepository.findAllByRequesterId(userDto.getId()))
                                   .thenReturn(Collections.singletonList(itemRequest));
         when(itemRepository.findAllByRequestId(userDto.getId())).thenReturn(Collections.singletonList(item));
@@ -83,26 +81,27 @@ class ItemRequestServiceImplTest {
 
     @Test
     void getAllRequest() {
-        Pageable pageable = PageRequest.of(1,1);
-        when(userService.getUser(userDto.getId())).thenReturn(userDto);
-        when(itemRequestRepository.findAll()).thenReturn(Collections.singletonList(itemRequest2));
-        when(itemRepository.findAllByOwnerId(userDto.getId(),pageable)).thenReturn(Collections.singletonList(item));
+        User user2 = new User(2L, "User1", "user@email.ru");
+        Item itemDb = new Item(1L, "item", "item test", true, user2, itemRequest);
+        when(itemRequestRepository.findAll(PageRequest.of(1,1))).thenReturn(new PageImpl<>(List.of(itemRequest)));
+        when(itemRepository.findAll()).thenReturn(Collections.singletonList(itemDb));
         List<ItemRequestResponseDto> itemRequestList = itemRequestService.getAllRequest(1, 1,2L);
         assertNotNull(itemRequestList);
         assertEquals(1,itemRequestList.size());
         ItemRequestResponseDto itemRequestDb = itemRequestList.get(0);
+        assertNotNull(itemRequestDb.getItems());
         assertEquals(itemRequest.getId(), itemRequestDb.getId());
         assertEquals(itemRequest.getDescription(), itemRequestDb.getDescription());
         assertEquals(itemRequest.getCreated().format(DateTimeFormatter.ofPattern("yyyy:MM:dd HH:mm:ss")),
-                                 itemRequestDb.getCreated().format(DateTimeFormatter.ofPattern("yyyy:MM:dd HH:mm:ss")));
+                itemRequestDb.getCreated().format(DateTimeFormatter.ofPattern("yyyy:MM:dd HH:mm:ss")));
         assertNotNull(itemRequestDb.getItems());
+        assertEquals(1, itemRequestDb.getItems().size());
         assertThrows(BadRequestException.class, () -> itemRequestService.getAllRequest(1, 0,2L));
     }
 
     @Test
     void getRequest() {
-        when(userService.getUser(userDto.getId())).thenReturn(userDto);
-        when(itemRequestRepository.findById(itemRequest.getId())).thenReturn(Optional.ofNullable(itemRequest));
+        when(itemRequestRepository.findById(itemRequest.getId())).thenReturn(Optional.of(itemRequest));
         ItemRequestResponseDto itemRequestDb = itemRequestService.getRequest(itemRequest.getId(), userDto.getId());
         assertEquals(itemRequest.getId(), itemRequestDb.getId());
         assertEquals(itemRequest.getDescription(), itemRequestDb.getDescription());
